--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -12,8 +12,8 @@ Using recorder.js module to record audio input from user and send to parsing
         #recordingslist audio { display: block; margin-bottom: 10px; }
     </style>
     <p>
-    <paper-button raised onclick='startRecording(this)'><iron-icon icon='av:fiber-manual-record'></iron-icon>Start Recording</paper-button>
-    <paper-button raised disabled onclick='stopRecording(this)'><iron-icon icon='av:stop'></iron-icon>Stop Recording</paper-button>
+    <paper-button raised onclick='startRecording(this)' style="width:330px;height:60px;font-size:25px; font-weight:bold;"><iron-icon icon='av:fiber-manual-record'></iron-icon>Start Recording</paper-button>
+    <paper-button raised disabled onclick='stopRecording(this)' style="width:330px;height:60px;font-size:25px; font-weight:bold;"><iron-icon icon='av:stop'></iron-icon>Stop Recording</paper-button>
     </p>
     <h2>Recordings</h2>
      <ul id='recordingslist'></ul>
