--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -43,8 +43,8 @@ code { color: blue; padding: 2px;}
 
 <div>
   <div>
-      <paper-button raised onclick='start(this)' id='start'><iron-icon icon='av:hearing'></iron-icon>Start Tuner</paper-button>
-      <paper-button raised disabled onclick='stop(this)' id='stop'>
+      <paper-button raised onclick='start(this)' id='start'style="width:330px;height:60px;font-size:25px; font-weight:bold;"><iron-icon icon='av:hearing'></iron-icon>Start Tuner</paper-button>
+      <paper-button raised disabled onclick='stop(this)' id='stop'style="width:330px;height:60px;font-size:25px; font-weight:bold;">
       <iron-icon icon='av:pause-circle-filled'></iron-icon>Stop</paper-button>
   </div>
 
