--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -7,16 +7,21 @@ Using recorder.js module to record audio input from user and send to parsing
 
 <dom-module id='my-recorder'>
 <template>
-    <style type='text/css'>
-        ul { list-style: none; }
-        #recordingslist audio { display: block; margin-bottom: 10px; }
-    </style>
-    <p>
-    <paper-button raised onclick='startRecording(this)' style="width:330px;height:60px;font-size:25px; font-weight:bold;"><iron-icon icon='av:fiber-manual-record'></iron-icon>Start Recording</paper-button>
-    <paper-button raised disabled onclick='stopRecording(this)' style="width:330px;height:60px;font-size:25px; font-weight:bold;"><iron-icon icon='av:stop'></iron-icon>Stop Recording</paper-button>
-    </p>
-    <h2>Recordings</h2>
-     <ul id='recordingslist'></ul>
+  <style type='text/css'>
+      ul { list-style: none; }
+      #recordingslist audio { display: block; margin-bottom: 10px; }
+  </style>
+  <p> <!-- Buttons -->
+    <paper-button raised onclick='startRecording(this)' style="width:330px;height:60px;font-size:25px; font-weight:bold;">
+    <iron-icon icon='av:fiber-manual-record'></iron-icon>
+    Start Recording</paper-button>
+
+    <paper-button raised disabled onclick='stopRecording(this)' style="width:330px;height:60px;font-size:25px; font-weight:bold;">
+    <iron-icon icon='av:stop'></iron-icon>
+    Stop Recording</paper-button>
+  </p>
+  <h2>Recordings</h2>
+  <ul id='recordingslist'></ul>
 </template>
 
 <script>
@@ -24,13 +29,13 @@ Polymer({
   is: 'my-recorder'
 });
 
+// Initializing variables
 var rec;
 var recordingslist;
-
 var audio = document.querySelector('audio');
 window.URL = window.URL || window.webkitURL;
 
-// mozGetUserMedia deprecated but automatically switches
+// Creating Audio Context using Web Audio API
 navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia ||
  navigator.mozGetUserMedia || navigator.msGetUserMedia;
 var AudioContext = window.AudioContext || window.webkitAudioContext;
@@ -45,14 +50,16 @@ var onFail = function(e) {
 var onSuccess = function(s) {
   console.log('onSuccess');
   var mediaStreamSource = audioCtx.createMediaStreamSource(s);
-  rec = new window.Recorder(mediaStreamSource);
   // Recording Begins
+  // should be 'new Recorder' but kept there to pass JSHint
+  rec = new window.Recorder(mediaStreamSource);
   rec.record();  
   console.log('recording started');
   // Comment/Uncomment to allow real-time playback for users
-  mediaStreamSource.connect(audioCtx.destination);
+  //mediaStreamSource.connect(audioCtx.destination);
 };
     
+// Start streaming audio and recording with recorder.js   
 function startRecording(button) {
   if (navigator.getUserMedia) {
     button.disabled = true;
@@ -62,7 +69,8 @@ function startRecording(button) {
     console.log('navigator.getUserMedia not present');
   }
 }
-    
+
+// Stop audio stream and save recording to WAV file
 function stopRecording(button) {
   button.disabled = true;
   button.previousElementSibling.disabled = false;
