--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -1,11 +1,14 @@
 <!--
-Tuning application using AnalyzerNode and Web Audio API to stream and visualize
+Tuning application using AnalyzerNode and PitchDetect
 -->
 
 <dom-module id='my-tuner'>
 <template>
+
+<!-- Load in PitchDetect -->
 <script src='../../scripts/gui.js'></script>
 <script src='../../scripts/pitchdetector.js'></script>
+
 <style>
 body { font-family: serif;}
 #note { font-size: 160px; }
@@ -43,9 +46,13 @@ code { color: blue; padding: 2px;}
 
 <div>
   <div>
-      <paper-button raised onclick='start(this)' id='start'style="width:330px;height:60px;font-size:25px; font-weight:bold;"><iron-icon icon='av:hearing'></iron-icon>Start Tuner</paper-button>
+      <paper-button raised onclick='start(this)' id='start'style="width:330px;height:60px;font-size:25px; font-weight:bold;">
+      <iron-icon icon='av:hearing'></iron-icon>
+      Start Tuner</paper-button>
+
       <paper-button raised disabled onclick='stop(this)' id='stop'style="width:330px;height:60px;font-size:25px; font-weight:bold;">
-      <iron-icon icon='av:pause-circle-filled'></iron-icon>Stop</paper-button>
+      <iron-icon icon='av:pause-circle-filled'></iron-icon>
+      Stop</paper-button>
   </div>
 
   <div class='pitch'>
@@ -59,12 +66,14 @@ code { color: blue; padding: 2px;}
     <span id='detune_amt'>--</span><span id='flat' display='inline'> &#9837;</span><span id='sharp'> &#9839;</span>
   </div>
 </div>
-<p></p>
 </template>
 
 <script>
+// Initialize Variables
 var tunerCanvas;
 var canvasCtx;
+
+// Initialize canvas to load on page start
 function init() {
   tunerCanvas = document.getElementById('tunerCanvas');
   canvasCtx = tunerCanvas.getContext('2d');
@@ -85,10 +94,11 @@ var mediaStreamSource;
 var audio = document.querySelector('audio');
 window.URL = window.URL || window.webkitURL;
 
+// Setting up Web Audio API
 var AudioContext = window.AudioContext || window.webkitAudioContext;
 var audioCtx = new AudioContext();
-var isStreaming = false;
 
+//Setting up AnalyserNode
 var analyser = audioCtx.createAnalyser();
 analyser.fftSize = 2048;
 var bufferLength = analyser.frequencyBinCount;
@@ -96,6 +106,7 @@ var dataArray = new Uint8Array(bufferLength);
 analyser.getByteTimeDomainData(dataArray);
 analyser.getByteFrequencyData(dataArray);
 
+// Updates the oscilloscope
 function drawCanvas() {
   var drawVisual = requestAnimationFrame(drawCanvas);
   analyser.getByteTimeDomainData(dataArray);
@@ -127,7 +138,6 @@ var onFail = function(e) {
     
 // If user allows access to microphone
 var onSuccess = function(s) {
-  isStreaming = true;
   console.log('Streaming!');
   mediaStreamSource = audioCtx.createMediaStreamSource(s);
   mediaStreamSource.connect(analyser);
@@ -135,6 +145,7 @@ var onSuccess = function(s) {
   //mediaStreamSource.connect(audioCtx.destination);
 };
 
+// Starts stream of audio when page loads
 navigator.getUserMedia  = navigator.getUserMedia || 
 navigator.webkitGetUserMedia || navigator.mozGetUserMedia || navigator.msGetUserMedia;
 if (navigator.getUserMedia) {
@@ -142,6 +153,9 @@ if (navigator.getUserMedia) {
 } else {
   console.log('navigator.getUserMedia not present');
 }
+
+// Draw it!
 drawCanvas();
+
 </script>
 </dom-module>
