--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -64,7 +64,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     });
     // add #! before urls
     page({
-      hashbang: false
+      hashbang: true
     });
   });
 </script>
