moved canvas styling to styles

--- a/app/index.html
+++ b/app/index.html
@@ -179,8 +179,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <paper-material elevation="1" id='background'>
                 <h2 class="page-title">Tuning</h2>
                 <my-tuner></my-tuner>
-                <p><canvas id='tunerCanvas'
-                style='border: 1px solid rgb(170, 170, 170);left: 10px;top: 10px;width: 50%; -moz-user-select: none;'></canvas></p>
+                <p><canvas id='tunerCanvas'></canvas></p>
               </paper-material>
             </section>
 
