--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -114,6 +114,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     -webkit-transform-origin: left center;
     transform-origin: left center;
   }
+  canvas {
+    border: 1px solid rgb(170, 170, 170);
+    left: 10px;
+    top: 10px;
+    width: 50%; 
+    -moz-user-select: none;
+  }
 
   /* Height of the scroll area */
   .content {
