moved recorder csss to style dir

--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -135,6 +135,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     width: 50%; 
     -moz-user-select: none;
   }
+  ul { 
+    list-style: none; 
+  }
+  #recordingslist audio { 
+    display: block; 
+    margin-bottom: 10px; 
+  }
 
   /* Height of the scroll area */
   .content {
