--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -18,6 +18,8 @@ Using recorder.js module to record audio input from user and send to parsing
   </p>
   <h2>Recordings</h2>
   <ul id='recordingslist'></ul>
+
+  <my-playback></my-playback>
 </template>
 
 <script>
