--- a/app/elements/my-playback/my-playback.html
+++ b/app/elements/my-playback/my-playback.html
@@ -2,13 +2,85 @@
 
 <dom-module id='my-playback'>
 <template>
-  play:
+
+<paper-dropdown-menu id='keys' label='Choose Key' vertical-align='top' horizontal-align='left'>
+  <paper-listbox class='dropdown-content'>
+    <paper-item value='261.63'>C4</paper-item>
+    <paper-item value='277.18'>C#4/Db4</paper-item>
+    <paper-item value='293.66'>D4</paper-item>
+    <paper-item value='311.13'>D#4/Eb4</paper-item>
+    <paper-item value='329.63'>E4</paper-item>
+    <paper-item value='349.23'>F4</paper-item>
+    <paper-item value='369.99'>F#4/Gb4</paper-item>
+    <paper-item value='392.00 '>G4</paper-item>
+    <paper-item value='415.30'>G#4/Ab4</paper-item>
+    <paper-item value='440.00'>A4</paper-item>
+    <paper-item value='466.16'>A#4/Bb4</paper-item>
+    <paper-item value='493.88'>B4</paper-item>
+  </paper-listbox>
+</paper-dropdown-menu>
+
+<paper-button raised onclick='major(this)'>Major</paper-button>
+<paper-button raised disabled onclick='minor(this)'>Minor</paper-button>
+
+<p>
+  <paper-button raised onclick='playNote(this)'>Play Note</paper-button>
+  <paper-button raised disabled onclick='stopNote(this)'>Stop Note</paper-button> 
+</p>
 </template>
 <script>
   Polymer({
     is: 'my-playback'
   });
 
-</script>
+var osc;
+var isPlaying;
+var audioContext;
+var tonality;
 
+var audio = document.querySelector('audio');
+window.URL = window.URL || window.webkitURL;
+
+// Creating Audio Context using Web Audio API
+navigator.getUserMedia  = navigator.getUserMedia || navigator.webkitGetUserMedia ||
+ navigator.mozGetUserMedia || navigator.msGetUserMedia;
+var audioContext = window.AudioContext || window.webkitAudioContext;
+var audioCtx = new AudioContext();
+
+function major(button) {
+  button.disabled = true;
+  button.nextElementSibling.disabled = false;
+  tonality = 'Major';
+}
+
+function minor(button) {
+  button.disabled = true;
+  button.previousElementSibling.disabled = false;
+  tonality = 'Minor';
+}
+
+function stopNote(button) {
+  if (osc) {
+    osc.stop();
+    osc.disconnect();
+    osc = null;
+  }
+  button.disabled = true;
+  button.previousElementSibling.disabled = false;
+}
+
+function playNote(button) {
+  if (isPlaying) {
+    stopNote();
+  }
+  button.disabled = true;
+  button.nextElementSibling.disabled = false;
+  isPlaying = true;
+  osc = audioCtx.createOscillator();
+  osc.connect(audioCtx.destination);
+  osc.frequency.value = document.getElementById('keys').value;
+  osc.start(0);
+}
+
+</script>
 </dom-module>
