--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   <!-- Load in paper-buttons and av-icons -->
   <link rel="import" href="bower_components/paper-button/paper-button.html">
+  <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
   <link rel="import" href="bower_components/iron-icons/av-icons.html">
 
 </head>
