--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -41,9 +41,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
 
     /* paper-menu */
-    --paper-menu-background-color: #fff;
+    --paper-menu-background-color: #ffffff;
     --menu-link-color: #111111;
-
+    
+    /* paper-button */
     --paper-button-ink-color: var(--paper-pink-a200);
     --paper-button-raised-keyboard-focus: {
       background-color: var(--paper-pink-a200) !important;
