--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -41,14 +41,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
 
     /* paper-menu */
-    --paper-menu-background-color: #ffffff;
-    --menu-link-color: #111111;
+    --paper-menu-background-color: --default-primary-color;
+    --menu-link-color: --accent-color;
+    --paper-dropdown-menu-ripple: true;
     
     /* paper-button */
-    --paper-button-ink-color: var(--paper-pink-a200);
+    --paper-button-ink-color: var(--dark-primary-color);
     --paper-button-raised-keyboard-focus: {
-      background-color: var(--paper-pink-a200) !important;
-      color: white !important;
+      background-color: var(--light-primary-color) !important;
+      color: --accent-color !important;
     };
   }
 
