--- a/app/index.html
+++ b/app/index.html
@@ -57,10 +57,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- For shared styles, shared-styles.html import in elements.html -->
   <style is="custom-style" include="shared-styles"></style>
 
-  <!-- Load in paper-buttons and av-icons -->
+  <!-- Load in paper and iron parts -->
   <link rel="import" href="bower_components/paper-button/paper-button.html">
   <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+  <link rel="import" href="bower_components/paper-listbox/paper-listbox.html">
   <link rel="import" href="bower_components/iron-icons/av-icons.html">
+  <link rel="import" href="bower_components/iron-component-page/iron-component-page.html">
 
 </head>
 
