--- a/app/index.html
+++ b/app/index.html
@@ -108,9 +108,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <paper-icon-button id="paperToggle" icon="menu" paper-drawer-toggle></paper-icon-button>
           <span class="flex"></span>
 
-          <!-- Toolbar icons -->
+          <!-- Toolbar icons 
           <paper-icon-button icon="refresh"></paper-icon-button>
           <paper-icon-button icon="search"></paper-icon-button>
+          -->
 
           <!-- Application name -->
           <div class="middle middle-container center horizontal layout">
