--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -22,11 +22,19 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   /* Application theme */
 
   :root {
+    /* Original colors
     --dark-primary-color: #303F9F;
     --default-primary-color: #3F51B5;
     --light-primary-color: #C5CAE9;
-    --text-primary-color: #ffffff; /*text/icons*/
+    --text-primary-color: #ffffff; /*text/icons*
     --accent-color: #FF4081;
+    */
+    --dark-primary-color: #455A64;
+    --default-primary-color: #607D8B;
+    --light-primary-color: #CFD8DC;
+    --text-primary-color: #ffffff; /*text/icons*/
+    --accent-color: #FF5252;
+
     --primary-background-color: #c5cae9;
     --primary-text-color: #212121;
     --secondary-text-color: #727272;
@@ -36,31 +44,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     /* Components */
 
     /* paper-drawer-panel */
-    --drawer-menu-color: #ffffff;
-    --drawer-border-color: 1px solid #ccc;
-    --drawer-toolbar-border-color: 1px solid rgba(0, 0, 0, 0.22);
+    --drawer-menu-color: var(--light-primary-color);
+    --drawer-border-color: 1px solid var(--accent-color);
+    --drawer-toolbar-border-color: 1px solid var(--dark-primary-color);
+    --paper-toolbar-background: var(--default-primary-color);
 
     /* paper-menu */
-    --paper-menu-background-color: --default-primary-color;
-    --menu-link-color: --accent-color;
+    --paper-menu-background-color: var(--light-primary-color);
+    --menu-link-color: var(--accent-color);
+    --paper-dropdown-menu-background-color: var(--light-primary-color);
     --paper-dropdown-menu-ripple: true;
-    
-    /* paper-button */
-    --paper-button-ink-color: var(--dark-primary-color);
-    --paper-button-raised-keyboard-focus: {
-      background-color: var(--light-primary-color) !important;
-      color: --accent-color !important;
 
     /* paper input */
-      --paper-input-container-color: var(--divider-color);
+    --paper-input-container-color: var(--divider-color);
+    --paper-input-container-focus-color: var(--accent-color);
+
+    /* iron icons */ 
+    --iron-icon-fill-color: var(--accent-color);
+    
+    /* paper-button */
+    --paper-button-ink-color: var(--accent-color);
+    --paper-button-raised-keyboard-focus: {
+      background-color: var(--light-primary-color);
+      color: var(--accent-color);
     };
   }
 
   /* General styles */
 
   #drawerToolbar {
-    color: var(--secondary-text-color);
-    background-color: var(--drawer-menu-color);
+    color: var(--light-primary-color);
+    background-color: var(--dark-primary-color);
     border-bottom: var(--drawer-toolbar-border-color);
   }
 
@@ -100,7 +114,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     min-height: 48px;
     padding: 0 16px;
   }
-  
+
   paper-toolbar.tall .app-name {
     font-size: 40px;
     font-weight: 300;
@@ -143,6 +157,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   ul { 
     list-style: none; 
+  }
+
+  title {
+    font-size: 150px;
+     font-weight: bold;
   }
 
   #recordingslist audio { 
