--- a/app/elements/my-metronome/my-metronome.html
+++ b/app/elements/my-metronome/my-metronome.html
@@ -1,9 +1,8 @@
 <dom-module id= 'my-metronome'>
 <template>
-<head>
 <style>
-@-webkit-keyframes pulse 
-{       
+      @-webkit-keyframes pulse 
+      {       
       0% {-webkit-transform: scale(0); opacity: 0;}
       8% {-webkit-transform: scale(0); opacity: 1;}
       15% {-webkit-transform: scale(0.1); opacity: 1;}
@@ -59,8 +58,7 @@
       border-image: initial;
       }
     </style>
-  </head>
-  </body>
+  <p>
     <div>
       <div id="tempoBox">Tempo: <span id="showTempo">120</span>BPM <input id="tempo" type="range" min="30.0" max="160.0" step="1"value="120" style="height: 20px; width: 200px" onInput="tempo = event.target.value; document.getElementById('showTempo').innerText=tempo;">
         <button onclick="metronomeStart()">Start</button>
@@ -72,7 +70,8 @@
         </div>
       </div>
     </div>
-  </body>
+  </p>
+  </template>
 <script>
 Polymer({
     is: 'my-metronome'
@@ -105,5 +104,4 @@ function metronomeStop(button) {
   document.getElementById('metronome').style.display = 'none';
 }
 </script>
-</html>
 </dom-module>
