fixed the height/width of the pulser, changed it's positioning on the screen

--- a/app/elements/my-metronome/my-metronome.html
+++ b/app/elements/my-metronome/my-metronome.html
@@ -1,7 +1,7 @@
 <dom-module id= 'my-metronome'>
 <template>
 <style>
-      @-webkit-keyframes pulse 
+@-webkit-keyframes pulse 
       {       
       0% {-webkit-transform: scale(0); opacity: 0;}
       8% {-webkit-transform: scale(0); opacity: 1;}
@@ -22,13 +22,13 @@
       {
       display: block;
       position: absolute;
-      top: 12px;
-      left: 450px;
+      top: 140px;
+      left: 875px;
       }
 
       .pulse_holder .pulse_marker 
       {
-      width: 30px;
+      width: 0px;
       height: 30px;
       background: #099;
       border-radius: 28px;
@@ -42,11 +42,11 @@
       right: -26.35px;
       top: -26.35px;
       z-index: 10;
-      background-color: transparent;
-      opacity: 0;
-      width: 64px;
-      height: 64px;
-      border: 8px solid rgba(0, 128, 64, 1);
+      background-color: #ff0000;
+      opacity: #ff0000;
+      width: 180px;
+      height: 180px;
+      border: 8px solid rgba(255, 0, 0, 1);
       -webkit-border-radius: 100px;
       -moz-border-radius: 200px;
       -o-border-radius: 100px;
