--- a/app/elements/my-metronome/my-metronome.html
+++ b/app/elements/my-metronome/my-metronome.html
@@ -60,16 +60,15 @@
     </style>
   <p>
     <div>
-      <div id="tempoBox">Tempo: <span id="showTempo">120</span>BPM <input id="tempo" type="range" min="30.0" max="160.0" step="1"value="120" style="height: 20px; width: 200px" onInput="tempo = event.target.value; document.getElementById('showTempo').innerText=tempo;">
-        <button onclick="metronomeStart()">Start</button>
-        <button id='stop' onclick="metronomeStop()">Stop</button>
+      <paper-input id='tempo' type = 'number' min='30' max='160' step='1' inputElement = 'tempo'></paper-input>
+        <paper-button raised onclick="metronomeStart()">Metronome Start</paper-button>
+        <paper-button raised id='stop' onclick="metronomeStop()">Metronome Stop</paper-button>
         <div id="metronome" style="display:none" class=pulse_holder>
           <div class=pulse_marker>
             <div id="pulser" class=pulse_rays></div>
           </div>
         </div>
       </div>
-    </div>
   </p>
   </template>
 <script>
