--- a/app/elements/my-playback/my-playback.html
+++ b/app/elements/my-playback/my-playback.html
@@ -23,8 +23,10 @@
 <paper-button raised onclick='major(this)'>Major</paper-button>
 <paper-button raised disabled onclick='minor(this)'>Minor</paper-button>
 
-  <paper-button raised onclick='playNote(this)'>Play Note</paper-button>
-  <paper-button raised disabled onclick='stopNote(this)'>Stop Note</paper-button> 
+<paper-button raised onclick='playNote(this)'>Play Note</paper-button>
+<paper-button raised disabled onclick='stopNote(this)'>Stop Note</paper-button> 
+
+<my-metronome></my-metronome>
 
 </p>
 </template>
