--- a/app/index.html
+++ b/app/index.html
@@ -62,6 +62,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
   <link rel="import" href="bower_components/paper-listbox/paper-listbox.html">
   <link rel="import" href="bower_components/iron-icons/av-icons.html">
+  <link rel="import" href="bower_components/iron-icons/image-icons.html">
   <link rel="import" href="bower_components/iron-component-page/iron-component-page.html">
 
 </head>
