--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -8,12 +8,13 @@ Using recorder.js module to record audio input from user and send to parsing
 <dom-module id='my-recorder'>
 <template>
 <p>
-  <paper-input id='compositionName' always-float-label required placeholder='Try it!' label='Enter Composition Name Here' maxlength='30' style='max-width:50%;'>
+  <paper-input id='compositionName' always-float-label required placeholder='Try it!' label='Enter Composition Name Here' maxlength='30' style='max-width:40%;'>
   <iron-icon prefix icon='icons:save' onclick='saveName(this)'></iron-icon>
   </paper-input>
 </p>
 
 <my-playback></my-playback>
+<my-metronome></my-metronome>
 
 <p> <!-- Buttons -->
   <paper-button raised onclick='startRecording(this)'>
