--- a/app/elements/my-metronome/my-metronome.html
+++ b/app/elements/my-metronome/my-metronome.html
@@ -22,7 +22,7 @@
       {
       display: block;
       position: absolute;
-      top: 140px;
+      top: 120px;
       left: 875px;
       }
 
@@ -44,8 +44,8 @@
       z-index: 10;
       background-color: #ff0000;
       opacity: #ff0000;
-      width: 180px;
-      height: 180px;
+      width: 185px;
+      height: 185px;
       border: 8px solid rgba(255, 0, 0, 1);
       -webkit-border-radius: 100px;
       -moz-border-radius: 200px;
@@ -58,8 +58,11 @@
       border-image: initial;
       }
 </style>
+<script>
+document.getElementById('tempo').value = '120';
+</script>
     <div display:'inline-block'>
-      <paper-input id='tempo' type ='number' min='30' max='160' step='10' inputElement = 'tempo' label='Enter Tempo Here' style='max-width:10%;'></paper-input>
+      <paper-input id='tempo' type ='number' min='30' max='160' step='1' inputElement = 'tempo' label='Enter Tempo Here' style='width:16%;'>120</paper-input>
         <paper-button raised  onclick="metronomeStart(this)">
         <iron-icon icon='image:timer'></iron-icon>
         Metronome Start</paper-button>
@@ -77,7 +80,7 @@
 Polymer({
     is: 'my-metronome'
   });
-var tempo;          // tempo (in beats per minute)
+var tempo = 120;          // tempo (in beats per minute)
 var audio = new Audio('sounds/Tick.mp3');
 var interval = null;
 var pulser;
