--- a/app/elements/my-tuner/my-tuner.html
+++ b/app/elements/my-tuner/my-tuner.html
@@ -6,8 +6,8 @@ Tuning application using AnalyzerNode and PitchDetect
 <template>
 
 <!-- Load in PitchDetect -->
-<script src='../../scripts/gui.js'></script>
-<script src='../../scripts/pitchdetector.js'></script>
+<script src='gui.js'></script>
+<script src='pitchdetector.js'></script>
 
 <style>
 body { font-family: serif;}
