--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -63,6 +63,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       color: var(--accent-color);
     };
   }
+  body {
+    background: #c5cae9;
+    font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    color: #333;
+  }
   /* General styles */
   #drawerToolbar {
     color: var(--light-primary-color);
