--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <!-- endbuild-->
 
   <!-- build:js scripts/webcomponents-lite.min.js -->
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+  <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
   <!-- endbuild -->
 
   <!-- will be replaced with elements/elements.vulcanized.html -->
@@ -169,8 +169,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <paper-material elevation="1">
                 <my-recorder></my-recorder>
               </paper-material>
+              <paper-material elevation="1">
+                <my-list></my-list>
+              </paper-material>
             </section>
-
+              
             <section data-route="saved">
               <paper-material elevation="1">
                 <h2 class="page-title">Saved</h2>
