separate elements in record section, fix pulser position

--- a/app/index.html
+++ b/app/index.html
@@ -166,12 +166,23 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             </section>
 
             <section data-route="record">
+
               <paper-material elevation="1">
                 <my-recorder></my-recorder>
               </paper-material>
+
+              <paper-material elevation="1">
+              <my-metronome></my-metronome>
+              </paper-material>
+
+              <paper-material elevation="1">
+              <my-playback></my-playback>
+              </paper-material>
+
               <paper-material elevation="1">
                 <my-list></my-list>
               </paper-material>
+
             </section>
               
             <section data-route="saved">
