--- a/app/elements/my-recorder/my-recorder.html
+++ b/app/elements/my-recorder/my-recorder.html
@@ -13,8 +13,6 @@ Using recorder.js module to record audio input from user and send to parsing
   </paper-input>
 </p>
 
-<my-playback></my-playback>
-<my-metronome></my-metronome>
 
 <p> <!-- Buttons -->
   <paper-button raised onclick='startRecording(this)'>
@@ -31,7 +29,7 @@ Using recorder.js module to record audio input from user and send to parsing
 
 <script>
 Polymer({
-  is: 'my-recorder'
+  is: 'my-recorder',
 });
 // Initializing variables
 var rec;
