add quotes causing metronome to break in some envs

--- a/app/elements/my-metronome/my-metronome.html
+++ b/app/elements/my-metronome/my-metronome.html
@@ -50,7 +50,7 @@
         border-image: initial;
       }
       #tempo {
-       width:16%;
+        width:16%;
       }
     </style>
     <script>
@@ -69,9 +69,9 @@
         Metronome Stop
       </paper-button>
 
-      <div id="metronome" style="display:none" class=pulse_holder>
-        <div class=pulse_marker>
-          <div id="pulser" class=pulse_rays></div>
+      <div id="metronome" style="display:none" class="pulse_holder">
+        <div class="pulse_marker">
+          <div id="pulser" class="pulse_rays"></div>
         </div>
       </div>
     </div>
