load polymer into my-playback

--- a/app/elements/my-playback/my-playback.html
+++ b/app/elements/my-playback/my-playback.html
@@ -1,7 +1,6 @@
 <!-- my-playback will playback keys for the recording functionality -->
-
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <dom-module id='my-playback'>
-
 <template>
 <p>
 <paper-dropdown-menu id='keys' label='Choose Key' vertical-align='top' horizontal-align='left'>
